kubernetes/apps/harbor/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-tailscale
  annotations:
    tailscale.com/proxy-group: ingress-proxies
spec:
  ingressClassName: tailscale
  rules:
    - host: harbor.tail9d4c9f.ts.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: harbor
              port:
                number: 80
